force-app/main/default/objects/XactlyExpress__XCPlanLibraryTracker__c/XactlyExpress__XCPlanLibraryTracker__c.object-meta.xml
<CustomObject>
    <description>Track plan library selection from orgs</description>
    <label>XCPlanLibraryTracker</label>
    <nameField>
        <label>XCPlanLibraryTracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCPlanLibraryTrackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>