force-app/main/default/objects/XactlyExpress__XCPlanLibraryTracker__c/fields/XactlyExpress__Downloads__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Downloads__c</fullName>
    <label>Downloads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>