force-app/main/default/objects/XactlyExpress__XCPlanLibraryTracker__c/fields/XactlyExpress__Plan__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Plan__c</fullName>
    <label>Plan</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>