force-app/main/default/objects/XactlyExpress__XCPlanLibraryTracker__c/fields/XactlyExpress__planName__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__planName__c</fullName>
    <label>planName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>