force-app/main/default/objects/XactlyExpress__XCPlanLibraryTracker__c/listViews/XactlyExpress__All.listView-meta.xml
<ListView>
    <fullName>XactlyExpress__All</fullName>
    <columns>XactlyExpress__Plan__c</columns>
    <columns>XactlyExpress__OrgID__c</columns>
    <columns>XactlyExpress__Downloads__c</columns>
    <columns>XactlyExpress__orgName__c</columns>
    <columns>XactlyExpress__planName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>